[package]
name = "t1"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["process-exit", "process-relaunch", "shell-open", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
thiserror = "1.0.40"
anyhow = "1.0.71"
log = "0.4.18"
sysinfo = "0.29.0"
toml = "*"
cocoa = "*"
objc = "*"
open = "4.1.0"
dirs = "5.0.1"
machine-uid = "0.3.0"
tokio = { version = "1.28.2", features = ["time", "process"] }
reqwest = { version = "0.11.18", features = ["json", "cookies", "native-tls", "socks"] }
dirs-next = "2.0.0"
log4rs = "1.2.0"
polodb_core = "4.4.0"
chrono = "0.4.26"
base64 = "0.21.2"
notify-debouncer-mini = { version = "0.3.0", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
